Fix spacing lightbox

--- a/src/app/components/lightbox/lightbox.component.scss
+++ b/src/app/components/lightbox/lightbox.component.scss
@@ -57,10 +57,8 @@
   z-index: 2;
   height: 100%;
   padding: 1rem;
-}
-
-.left {
-  padding-right: 3rem;
+  padding-top: 0;
+  padding-right: $lightbox-bloc-size * 20 / 100;
 }
 
 .dialog {
